day5-kubernetes-security/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: security-lab
spec:
  selector:
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: security-lab
spec:
  selector:
    tier: backend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: security-lab
spec:
  selector:
    tier: database
  ports:
  - port: 80
    targetPort: 80
